<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:background="@drawable/title"/>

    <TableRow>
        <TextView />
    </TableRow>
    <TableRow>
        <TextView
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:id="@+id/user"
        android:gravity="end"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/text1"/>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:id="@+id/input1" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="0.1"
            android:id="@+id/password"
            android:gravity="end"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/text2"/>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:id="@+id/input2"
            android:inputType="textPassword" />
    </TableRow>
    <TableRow>
        <CheckBox
            android:layout_width="wrap_content"
            android:id="@+id/remember_button"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/remember_text"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/remember_text"/>
    </TableRow>

    <ProgressBar
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/progress"
        android:max="250"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_marginTop="15dp"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/login_button"
        android:background="#add8e6"
        android:textSize="25sp"
        android:text="@string/login_button"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

</TableLayout>